--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,13 +18,13 @@
         <ion-label>
           Matricula
         </ion-label>
-        <ion-input type="text" placeholder="" value="104011"[(ngModel)]="userData.codusuario" ></ion-input>
+        <ion-input type="text" placeholder="" value=""[(ngModel)]="userData.codusuario" ></ion-input>
       </ion-item>
       <ion-item id="login-input2">
         <ion-label>
           Senha
         </ion-label>
-        <ion-input type="password" value="123456" placeholder=""[(ngModel)]="userData.senha"></ion-input>
+        <ion-input type="password" value="" placeholder=""[(ngModel)]="userData.senha"></ion-input>
       </ion-item>
     </ion-list>
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
