--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-
+  <meta http-equiv="X-Frame-Options: ALLOW-FROM https://google.com.br/" >
+  <meta http-equiv="X-Frame-Options: ALLOW-FROM http://portal.estudeseg.com.br/EducaMobile/Account/Login" >
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -24,7 +25,6 @@
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
-    }
   </script>
 -->
   <link href="build/main.css" rel="stylesheet">
