--- a/src/pages/academico/academico.html
+++ b/src/pages/academico/academico.html
@@ -1,20 +1,15 @@
-<!--
-  Generated template for the AcademicoPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>academico</ion-title>
+    <ion-title>Acadêmico</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <div #frame style="width:100%;height:100%;overflow:scroll !important;-webkit-overflow-scrolling:touch !important">
-    <iframe [src]="http://portal.estudeseg.com.br/EducaMobile" class="iframe" scrolling="yes" ></iframe>
+  <div id="divframe" style="width: 100%; height: 100%">
+    
   </div>
+ 
 </ion-content>
